attempt with HTML

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="author" content="Egill Anton Hlöðversson">
-    <meta name="viewport" content="width=800, user-scalable=no">
+	<meta charset='utf-8'/>
+    <meta name="author" content="Egill Anton Hlöðversson"/>
 	<title> Egill Anton Hlöðversson - About</title>
+	<link rel="stylesheet" href="stylesheets/index.css"/>
 </head>
 <body>
 <!-- NAVIGATION -->
