--- a/index.html
+++ b/index.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset='utf-8'/>
-    <meta name="author" content="Egill Anton Hlöðversson"/>
-	<title> Egill Anton Hlöðversson - About</title>
-	<link rel="stylesheet" href="stylesheets/index.css"/>
-</head>
-<body>
-<!-- NAVIGATION -->
-<div class="navigation">
-	<h2>Nav</h2>
-</div>
-<!-- MAIN CONTENT -->
-<div class="content">
-	<h1>This is attempt 1</h1>
-</div>
-<!-- FOOTER -->
-<div class="footer">
-	<h2>Footer</h2>
-</div>
-</body>
+<html lang="">
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Egill Anton Hlöðversson</title>
+		<!-- MY STYLESHEETS -->
+		<link rel="stylesheet" href="stylesheets/index.css">
+
+	</head>
+	<body>
+		<div class="container">
+			<h1>Egill Anton</h1>
+			<img src="images/profile.png"  id="profileImage" alt="My Profile Picture">
+			<div class="btn-group">
+				<a class="btn" href="https://github.com/egillanton" role="button" target="_blank">code</a>
+				<a class="btn" href="https://www.facebook.com/egillanton" role="button" target="_blank">social</a>
+				<a class="btn" href="#" role="button" target="_blank">blog</a>
+				<a class="btn" href="https://www.linkedin.com/in/egillanton/" role="button" target="_blank">resume</a>
+			</div>
+		</div>
+	</body>
 </html>
