--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 			<div class="btn-group">
 				<a class="btn" href="https://github.com/egillanton" role="button" target="_blank">code</a>
 				<a class="btn" href="https://www.facebook.com/egillanton" role="button" target="_blank">social</a>
-				<a class="btn" href="#" role="button" target="_blank">blog</a>
-				<a class="btn" href="https://www.linkedin.com/in/egillanton/" role="button" target="_blank">resume</a>
+				<a class="btn" href="#" role="button">blog</a>
+				<a class="btn" href="resume.html" role="button"  target="_blank">resume</a>
 			</div>
 		</div>
 	</body>
