--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 <head>
-	<title>My blog</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Egill Anton Hlöðversson - My blog</title>
+	<!-- MY STYLESHEETS -->
+	<link rel="stylesheet" href="stylesheets/index.css">
 	<link rel="stylesheet" href="stylesheets/blog.css">
 </head>
 <body>
 	<div class="jumbotron">
-    	<h1>My blog</h1>
-  	</div>
+		<h1>My blog</h1>
+	</div>
 </body>
 </html>
