--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="stylesheets/blog.css">
 </head>
 <body>
-	<h1>My blog</h1>
-	
+	<h1 id="main-header">My blog</h1>
+
 </body>
 </html>
