--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1>Egill Anton</h1>
+			<h1 id="main-header">Egill Anton</h1>
 			<img src="images/profile.png"  id="profileImage" alt="My Profile Picture">
 			<div class="btn-group">
 				<a class="btn" href="https://github.com/egillanton" role="button" target="_blank">code</a>
