--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-	<h1>My resume</h1>
+	<h1 id="main-header">My resume</h1>
 	<div id="main">
 		<div id="photo">
 			<img src="images/profile.png" alt="My profile picture" />
