--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Egill Anton Hlöðversson - My blog</title>
 	<!-- MY STYLESHEETS -->
-	<link rel="stylesheet" href="stylesheets/index.css">
+	<link rel="stylesheet" href="stylesheets/style.css">
 	<link rel="stylesheet" href="stylesheets/blog.css">
 </head>
 <body>
