--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Egill Anton Hlöðversson</title>
 		<!-- MY STYLESHEETS -->
+		<link rel="stylesheet" href="stylesheets/style.css">
 		<link rel="stylesheet" href="stylesheets/index.css">
-
 	</head>
 	<body>
 		<div class="container">
