--- a/resume.html
+++ b/resume.html
@@ -6,12 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Egill Anton Hlöðversson - resume</title>
 	<!-- MY STYLESHEETS -->
-	<link rel="stylesheet" href="stylesheets/index.css">
+	<link rel="stylesheet" href="stylesheets/style.css">
 	<link rel="stylesheet" href="stylesheets/resume.css">
 </head>
 
 <body>
-	<h1 id="main-header">My resume</h1>
+	<div>
+		<h1 id="main-header">My resume</h1>
+	</div>
 	<div id="main">
 		<div id="photo">
 			<img src="images/profile.png" alt="My profile picture" />
