minor resumue editing

--- a/resume.html
+++ b/resume.html
@@ -75,8 +75,8 @@
 				<h2 class="title">Work experience</h2>
 				<div class="set">
 					<div class="item">
-						<h3><span class="company l">Össur ltd.</span>
-							<span class="date r">Jan 2017 &mdash; Jun 2017</span>
+						<h3><span class="company l">Össur hf.</span>
+							<span class="date r">Jan 2017 &mdash; May 2017</span>
 						</h3>
 						<div class="clear"> </div>
 						<span class="job_title">Student Intern</span><div class="clear"> </div>
@@ -91,8 +91,8 @@
 					</div>
 
 					<div class="item">
-						<h3><span class="company l">Raflax ehf</span>
-							<span class="date r">May 2015 &mdash; Jan 2016</span>
+						<h3><span class="company l">Raflax ehf.</span>
+							<span class="date r">May 2015 &mdash; Jul 2016</span>
 						</h3>
 						<div class="clear"> </div>
 						<span class="job_title">Electrician</span><div class="clear"> </div>
