--- a/resume.html
+++ b/resume.html
@@ -54,6 +54,14 @@
 					</div>
 
 					<div class="item">
+						<h3><span class="course l">Student Exchange</span>
+							<span class="date r">Aug 2016 &mdash; Dec 2016</span>
+						</h3>
+						<div class="clear"> </div>
+						<span class="school">Universitas Gadjah Mada</span>
+					</div>
+
+					<div class="item">
 						<h3><span class="course l">Electrician Journeyman with Associate degree</span>
 							<span class="date r">Aug 2011 &mdash; Dec 2013</span>
 						</h3>
@@ -95,7 +103,7 @@
 							<span class="date r">May 2015 &mdash; Jul 2016</span>
 						</h3>
 						<div class="clear"> </div>
-						<span class="job_title">Electrician</span><div class="clear"> </div>
+						<span class="job_title">Construction Electrician</span><div class="clear"> </div>
 					</div>
 
 					<div class="item">
@@ -103,7 +111,7 @@
 							<span class="date r">May 2013 &mdash; May 2015</span>
 						</h3>
 						<div class="clear"> </div>
-						<span class="job_title">Electrician</span><div class="clear"> </div>
+						<span class="job_title">Boat Electrician</span><div class="clear"> </div>
 					</div>
 
 					<div class="item">
@@ -111,7 +119,7 @@
 							<span class="date r">Dec 2011 &mdash; Dec 2012</span>
 						</h3>
 						<div class="clear"> </div>
-						<span class="job_title">Electrician</span><div class="clear"> </div>
+						<span class="job_title">Maintenance Electrician</span><div class="clear"> </div>
 					</div>
 				</div>
 				<div class="clear"> </div>
@@ -129,7 +137,12 @@
 				<h2 class="title">Languages</h2>
 				<div class="set">
 					<div class="item">
-						<span class="info"><div>Icelandic : Fluent/ Native</div><div>English : Fluent (15 years, of study and practice)</div></span>
+						<span class="info">
+							<div>Icelandic : Fluent/ Native</div>
+							<div>English : Fluent (15 years, of study and practice)</div>
+							<div>Spanish : Good command (3 years, of study and practice)</div>
+							<div>Danish : Basic communication skills (6 years of study)</div>
+						</span>
 					</div>
 				</div>
 				<div class="clear"> </div>
