--- a/resume.html
+++ b/resume.html
@@ -1,175 +1,203 @@
 <!DOCTYPE html>
 <html lang="">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Egill Anton Hlöðversson - resume</title>
-	<!-- MY STYLESHEETS -->
-	<link rel="stylesheet" href="stylesheets/style.css">
-	<link rel="stylesheet" href="stylesheets/resume.css">
-</head>
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Egill Anton Hlöðversson - resume</title>
+      <!-- MY STYLESHEETS -->
+      <link rel="stylesheet" href="stylesheets/style.css">
+      <link rel="stylesheet" href="stylesheets/resume.css">
+   </head>
+   <body>
+      <div>
+         <h1 id="main-header">My resume</h1>
+      </div>
+      <div id="main">
+         <div id="photo">
+            <img src="images/profile.png" alt="My profile picture" />
+         </div>
+         <div class="header photo">
+            <h1 id="title">Egill Anton Hlöðversson</h1>
+            <div class="basic-info section">
+               <div class="set">
+                  <p class="address">
+                     <span class="value">
+	                     Laufbrekka 8<br />
+	                     200 Kópavogur<br />
+	                     Iceland					
+                     </span>
+                  </p>
+                  <div class="r">
+                     <p class="email"><label>E-mail<span class="colon">:</span></label> <span class="value">egillanton@live.com</span></p>
+                     <p class="website"><label>Website<span class="colon">:</span></label> <span class="value">www.egillanton.com</span></p>
+                     <p class="phone"><label>Phone<span class="colon">:</span></label> <span class="value">+354 789 4724</span></p>
+                  </div>
+                  <div class="clear"> </div>
+               </div>
+               <!-- set //-->
+               <div class="clear"> </div>
+            </div>
+            <!-- basic-info //-->
+         </div>
+         <div class="clear"> </div>
+         <div class="section section-education">
+            <h2 class="title">Education</h2>
+            <div class="set">
+               <div class="item">
+                  <h3><span class="course l">B.Sc Computer Science</span>
+                     <span class="date r">Aug 2014 &mdash; Jun 2017</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="school">Reykjavik University</span>
+               </div>
+               <div class="item">
+                  <h3><span class="course l">Student Exchange</span>
+                     <span class="date r">Aug 2016 &mdash; Dec 2016</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="school">Universitas Gadjah Mada</span>
+               </div>
+               <div class="item">
+                  <h3><span class="course l">Electrician Journeyman with Associate degree</span>
+                     <span class="date r">Aug 2011 &mdash; Dec 2013</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="school">Fjölbrautaskólinn í Breiðholti</span><span class="clear"> </span>
+               </div>
+               <div class="item">
+                  <h3><span class="course l">High School Education</span>
+                     <span class="date r">Jul 2009 &mdash; Dec 2010</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="school">Santa Cruz International School</span><span class="clear"> </span>
+               </div>
+            </div>
+            <div class="clear"> </div>
+         </div>
+         <div class="section section-work">
+            <h2 class="title">Work experience</h2>
+            <div class="set">
+               <div class="item">
+                  <h3><span class="company l">Össur hf.</span>
+                     <span class="date r">Jan 2017 &mdash; May 2017</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="job_title">Student Intern</span>
+                  <div class="clear"> </div>
+               </div>
+               <div class="item">
+                  <h3><span class="company l">Nóbel Námsbúðir</span>
+                     <span class="date r">Apr 2015 &mdash; Apr 2016</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="job_title">Mentor and District Manager</span>
+                  <div class="clear"> </div>
+               </div>
+               <div class="item">
+                  <h3><span class="company l">Raflax ehf.</span>
+                     <span class="date r">May 2015 &mdash; Jul 2016</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="job_title">Construction Electrician</span>
+                  <div class="clear"> </div>
+               </div>
+               <div class="item">
+                  <h3><span class="company l">Trefjar ltd</span>
+                     <span class="date r">May 2013 &mdash; May 2015</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="job_title">Boat Electrician</span>
+                  <div class="clear"> </div>
+               </div>
+               <div class="item">
+                  <h3><span class="company l">Nifteind ehf.</span>
+                     <span class="date r">Dec 2011 &mdash; Dec 2012</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="job_title">Maintenance Electrician</span>
+                  <div class="clear"> </div>
+               </div>
+            </div>
+            <div class="clear"> </div>
+         </div>
+         <div class="section section-1489171035795">
+            <h2 class="title">Office Skills</h2>
+            <div class="set">
+               <div class="item">
+                  <span class="info">
+                     <div>
+                        <div>MS Word, Excel, PowerPoint, Sway</div>
+                        <div>Google Docs, Sheets, Slides</div>
+                        <div>Plot.ly</div>
+                     </div>
+                  </span>
+               </div>
+            </div>
+            <div class="clear"> </div>
+         </div>
 
-<body>
-	<div>
-		<h1 id="main-header">My resume</h1>
-	</div>
-	<div id="main">
-		<div id="photo">
-			<img src="images/profile.png" alt="My profile picture" />
-		</div>
-		<div class="header photo">
+         <div class="section section-1489171035795">
+            <h2 class="title">Technical Skills</h2>
+            <div class="set">
+               <div class="item">
+                  <span class="info">
+                     <div>
+                        <div>Languages: Assembly language x86, C, C#, C++, CSS, HTML, Java, Javascript, Matlab, Pyhton, SQL, XAML</div>
+                        <div>Framworks: ASP.NET MVC, Ogre 3D, Xamarin.Forms</div>
+                     </div>
+                  </span>
+               </div>
+            </div>
+            <div class="clear"> </div>
+         </div>
 
-			<h1 id="title">Egill Anton Hlöðversson</h1>
-			<div class="basic-info section">
-				<div class="set">
-
-					<p class="address">
-						<span class="value">
-							Laufbrekka 8<br />200 Kópavogur<br />Iceland					</span>
-						</p>
-						<div class="r">
-							<p class="email"><label>E-mail<span class="colon">:</span></label> <span class="value">egillanton@live.com</span></p>
-
-							<p class="website"><label>Website<span class="colon">:</span></label> <span class="value">www.egillanton.com</span></p>
-
-							<p class="phone"><label>Phone<span class="colon">:</span></label> <span class="value">+354 789 4724</span></p>
-						</div>
-						<div class="clear"> </div>
-					</div><!-- set //-->
-					<div class="clear"> </div>
-				</div><!-- basic-info //-->
-
-			</div><div class="clear"> </div>
-
-			<div class="section section-education">
-				<h2 class="title">Education</h2>
-				<div class="set">
-					<div class="item">
-						<h3><span class="course l">B.Sc Computer Science</span>
-							<span class="date r">Aug 2014 &mdash; Jun 2017</span>
-						</h3>
-						<div class="clear"> </div>
-						<span class="school">Reykjavik University</span>
-					</div>
-
-					<div class="item">
-						<h3><span class="course l">Student Exchange</span>
-							<span class="date r">Aug 2016 &mdash; Dec 2016</span>
-						</h3>
-						<div class="clear"> </div>
-						<span class="school">Universitas Gadjah Mada</span>
-					</div>
-
-					<div class="item">
-						<h3><span class="course l">Electrician Journeyman with Associate degree</span>
-							<span class="date r">Aug 2011 &mdash; Dec 2013</span>
-						</h3>
-						<div class="clear"> </div>
-						<span class="school">Fjölbrautaskólinn í Breiðholti</span><span class="clear"> </span>
-					</div>
-
-					<div class="item">
-						<h3><span class="course l">High School Education</span>
-							<span class="date r">Jul 2009 &mdash; Dec 2010</span>
-						</h3>
-						<div class="clear"> </div>
-						<span class="school">Santa Cruz International School</span><span class="clear"> </span>
-					</div>
-				</div>
-				<div class="clear"> </div>
-			</div>
-			<div class="section section-work">
-				<h2 class="title">Work experience</h2>
-				<div class="set">
-					<div class="item">
-						<h3><span class="company l">Össur hf.</span>
-							<span class="date r">Jan 2017 &mdash; May 2017</span>
-						</h3>
-						<div class="clear"> </div>
-						<span class="job_title">Student Intern</span><div class="clear"> </div>
-					</div>
-
-					<div class="item">
-						<h3><span class="company l">Nóbel Námsbúðir</span>
-							<span class="date r">Apr 2015 &mdash; Apr 2016</span>
-						</h3>
-						<div class="clear"> </div>
-						<span class="job_title">Mentor and District Manager</span><div class="clear"> </div>
-					</div>
-
-					<div class="item">
-						<h3><span class="company l">Raflax ehf.</span>
-							<span class="date r">May 2015 &mdash; Jul 2016</span>
-						</h3>
-						<div class="clear"> </div>
-						<span class="job_title">Construction Electrician</span><div class="clear"> </div>
-					</div>
-
-					<div class="item">
-						<h3><span class="company l">Trefjar ltd</span>
-							<span class="date r">May 2013 &mdash; May 2015</span>
-						</h3>
-						<div class="clear"> </div>
-						<span class="job_title">Boat Electrician</span><div class="clear"> </div>
-					</div>
-
-					<div class="item">
-						<h3><span class="company l">Nifteind ehf.</span>
-							<span class="date r">Dec 2011 &mdash; Dec 2012</span>
-						</h3>
-						<div class="clear"> </div>
-						<span class="job_title">Maintenance Electrician</span><div class="clear"> </div>
-					</div>
-				</div>
-				<div class="clear"> </div>
-			</div>
-			<div class="section section-1489171035795">
-				<h2 class="title">Computer Skills</h2>
-				<div class="set">
-					<div class="item">
-						<span class="info">Microsoft Word, Excel, PowerPoint, Sway<div><div>Google Docs</div><div>Sublime Text 3</div><div>Visual Studio 2012, 2015, 2017</div><div>MVC , MVVM Framework</div><div>Xamarin.Forms</div><div>IntelliJ</div><div>QT</div><div>Ogre3D</div><div>UNIX/Linux</div><div>GIT</div><div><br /></div></div></span>
-					</div>
-				</div>
-				<div class="clear"> </div>
-			</div>
-			<div class="section section-qualifications">
-				<h2 class="title">Languages</h2>
-				<div class="set">
-					<div class="item">
-						<span class="info">
-							<div>Icelandic : Fluent/ Native</div>
-							<div>English : Fluent (15 years, of study and practice)</div>
-							<div>Spanish : Good command (3 years, of study and practice)</div>
-							<div>Danish : Basic communication skills (6 years of study)</div>
-						</span>
-					</div>
-				</div>
-				<div class="clear"> </div>
-			</div>
-			<div class="section section-interests">
-				<h2 class="title">Interests</h2>
-				<div class="set">
-					<div class="item">
-						<span class="info"><div><div><span><span>Traveling</span></span></div><div><span><span>Foreign Languages</span></span></div><div><span><span>International relations</span></span></div><div><span><span>Start-Up</span></span></div><div><span><span>Healthy lifestyle</span></span></div><div><span><span>Computer Games</span></span></div><div><span><span>Problem Solving</span></span></div><div><span><span>Being in control of a development</span></span></div></div></span>
-					</div>
-				</div>
-				<div class="clear"> </div>
-			</div>
-			<div class="section section-references">
-				<h2 class="title">References</h2>
-				<div class="set">
-					<div class="item">
-
-						<span>More references available upon request.</span></span><div><br /></div></span>
-					</div>
-				</div>
-				<div class="clear"> </div>
-			</div>
-		</div>
-	</div>
-	<div class="footer">
-		<h5>2017</h5>
-	</div>
-</body>
+         <div class="section section-qualifications">
+            <h2 class="title">Languages</h2>
+            <div class="set">
+               <div class="item">
+                  <span class="info">
+                     <div>Icelandic : Fluent/ Native</div>
+                     <div>English : Fluent (15 years, of study and practice)</div>
+                     <div>Spanish : Intermediate (3 years, of study and practice)</div>
+                     <div>Danish : Low Intermediate (6 years of study)</div>
+                  </span>
+               </div>
+            </div>
+            <div class="clear"> </div>
+         </div>
+         <div class="section section-interests">
+            <h2 class="title">Interests</h2>
+            <div class="set">
+               <div class="item">
+                  <span class="info">
+                     <div>
+                        <div>Traveling</div>
+                        <div>Languages</div>
+                        <div>International Relations</div>
+                        <div>Latest Tech Trends</div>
+                        <div>Healthy Lifestyle</div>
+                        <div>Computer Games</div>
+                        <div>Problem Solving</div>
+                     </div>
+                  </span>
+               </div>
+            </div>
+            <div class="clear"> </div>
+         </div>
+         <div class="section section-references">
+            <h2 class="title">References</h2>
+            <div class="set">
+               <div class="item">
+                  <span>References available upon request.</span>
+               </div>
+            </div>
+            <div class="clear"> </div>
+         </div>
+      </div>
+      </div>
+      <div class="footer">
+         <h5>2017</h5>
+      </div>
+   </body>
 </html>
