--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="container">
 			<h1 id="main-header">Egill Anton</h1>
-			<img src="images/profile.png"  id="profileImage" alt="My Profile Picture">
+			<img src="images/profile.jpg"  id="profileImage" alt="My Profile Picture">
 			<div class="btn-group">
 				<a class="btn" href="https://github.com/egillanton" role="button" target="_blank">code</a>
 				<a class="btn" href="https://www.facebook.com/egillanton" role="button" target="_blank">social</a>
