--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
       </div>
       <div id="main">
          <div id="photo">
-            <img src="images/profile.png" alt="My profile picture" />
+            <img src="images/profile.jpg" alt="My profile picture" />
          </div>
          <div class="header photo">
             <h1 id="title">Egill Anton Hlöðversson</h1>
@@ -78,6 +78,14 @@
          <div class="section section-work">
             <h2 class="title">Work experience</h2>
             <div class="set">
+               <div class="item">
+                  <h3><span class="company l">Össur hf.</span>
+                     <span class="date r">June 2017 &mdash; Present</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="job_title">Software Developer - Contractor</span>
+                  <div class="clear"> </div>
+               </div>
                <div class="item">
                   <h3><span class="company l">Össur hf.</span>
                      <span class="date r">Jan 2017 &mdash; May 2017</span>
