--- a/index.html
+++ b/index.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Egill Anton Hlöðversson</title>
-		<!-- MY STYLESHEETS -->
-		<link rel="stylesheet" href="stylesheets/style.css">
-		<link rel="stylesheet" href="stylesheets/index.css">
-	</head>
-	<body>
-		<div class="container">
-			<h1 id="main-header">Egill Anton</h1>
-			<img src="images/profile.jpg"  id="profileImage" alt="My Profile Picture">
-			<div class="btn-group">
-				<a class="btn" href="https://github.com/egillanton" role="button" target="_blank">code</a>
-				<a class="btn" href="https://www.facebook.com/egillanton" role="button" target="_blank">social</a>
-				<a class="btn" href="blog.html" role="button">blog</a>
-				<a class="btn" href="resume.html" role="button"  target="_blank">resume</a>
-			</div>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Egill Anton Hlöðversson</title>
+	<!-- MY STYLESHEETS -->
+	<link rel="stylesheet" href="stylesheets/style.css">
+	<link rel="stylesheet" href="stylesheets/index.css">
+</head>
+<body>
+	<div class="container">
+		<h1 id="main-header">Egill Anton</h1>
+		<img src="images/profile.jpg"  id="profileImage" alt="My Profile Picture">
+		<div class="btn-group">
+			<a class="btn" href="https://github.com/egillanton" role="button" target="_blank">code</a>
+			<a class="btn" href="https://www.facebook.com/egillanton" role="button" target="_blank">social</a>
+			<a class="btn" href="blog.html" role="button">blog</a>
+			<a class="btn" href="resume.html" role="button"  target="_blank">resume</a>
 		</div>
-		<div class="icon-group">
-			  <a class="item" href="https://www.facebook.com/egillanton">
-			    <img src="images/icons/FacebookIcon.png" >
-			  </a>
-			  <a class="item" href="https://twitter.com/egill_anton">
-			    <img src="images/icons/TwitterIcon.png" >
-			  </a>
-			  <a class="item" href="https://plus.google.com/107047887002688021953">
-			    <img src="images/icons/GoogleIcon.png" >
-			  </a>
-			  <a class="item" href="https://www.instagram.com/egillanton/">
-			    <img src="images/icons/InstagramIcon.png" >
-			  </a>
-			  <a class="item" href="skype:egillanton?call">
-			    <img src="images/icons/SkypeIcon.png" >
-			  </a>
-			  <a class="item" href="https://www.youtube.com/channel/UCWyc7nAIiWKDp0mtLO66ssg">
-			    <img src="images/icons/YoutubeIcon.png" >
-			  </a>
-			  <a class="item" href="https://www.linkedin.com/in/egillanton/">
-			    <img src="images/icons/LinkedInIcon.png" >
-			  </a>
-			  <a class="item" href="https://github.com/egillanton">
-			    <img src="images/icons/GitHubIcon.png" >
-			  </a>
-			  <a class="item" href="mailto:egillanton@live.com">
-			    <img src="images/icons/EmailIcon.png" >
-			  </a>
-			  </div>
-			</div>
-	</body>
+	</div>
+</body>
+<div id="footer" class="icon-group">
+	<a class="item" href="https://www.facebook.com/egillanton">
+		<img src="images/icons/FacebookIcon.png" >
+	</a>
+	<a class="item" href="https://twitter.com/egill_anton">
+		<img src="images/icons/TwitterIcon.png" >
+	</a>
+	<a class="item" href="https://plus.google.com/107047887002688021953">
+		<img src="images/icons/GoogleIcon.png" >
+	</a>
+	<a class="item" href="https://www.instagram.com/egillanton/">
+		<img src="images/icons/InstagramIcon.png" >
+	</a>
+	<a class="item" href="skype:egillanton?call">
+		<img src="images/icons/SkypeIcon.png" >
+	</a>
+	<a class="item" href="https://www.youtube.com/channel/UCWyc7nAIiWKDp0mtLO66ssg">
+		<img src="images/icons/YoutubeIcon.png" >
+	</a>
+	<a class="item" href="https://www.linkedin.com/in/egillanton/">
+		<img src="images/icons/LinkedInIcon.png" >
+	</a>
+	<a class="item" href="https://github.com/egillanton">
+		<img src="images/icons/GitHubIcon.png" >
+	</a>
+	<a class="item" href="mailto:egillanton@live.com">
+		<img src="images/icons/EmailIcon.png" >
+	</a>
+</div>
+
 </html>
