--- a/resume.html
+++ b/resume.html
@@ -29,9 +29,23 @@
                      </span>
                   </p>
                   <div class="r">
-                     <p class="email"><label>E-mail<span class="colon">:</span></label> <span class="value">egillanton@live.com</span></p>
-                     <p class="website"><label>Website<span class="colon">:</span></label> <span class="value">www.egillanton.com</span></p>
-                     <p class="phone"><label>Phone<span class="colon">:</span></label> <span class="value">+354 789 4724</span></p>
+                     <p class="email">
+                        <label>E-mail:
+                           <span class="colon">:</span>
+                        </label> 
+                        <span class="value">
+                           <a href="mailto:egillanton@live.com">egillanton@live.com</a>
+                        </span>
+                     </p>
+                     <p class="website">
+                        <label>Website
+                           <span class="colon">:</span>
+                        </label> 
+                        <span class="value"><a href="http://egillanton.com/">www.egillanton.com</a></span>
+                     </p>
+                     <p class="phone">
+                        <label>Phone<span class="colon">:</span></label> 
+                        <span class="value"><a href="tel:+3547894724">+354 789 4724</a></span></p>
                   </div>
                   <div class="clear"> </div>
                </div>
