--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<a class="btn" href="https://github.com/egillanton" role="button" target="_blank">code</a>
 			<a class="btn" href="https://www.facebook.com/egillanton" role="button" target="_blank">social</a>
 			<a class="btn" href="blog.html" role="button">blog</a>
-			<a class="btn" href="resume.html" role="button"  target="_blank">resume</a>
+			<a class="btn" href="resume.html" role="button">resume</a>
 		</div>
 	</div>
 </body>
