--- a/resume.html
+++ b/resume.html
@@ -165,8 +165,8 @@
                <div class="item">
                   <span class="info">
                      <div>
-                        <div>Languages: Assembly language x86, C, C#, C++, CSS, HTML, Java, Javascript, Matlab, Pyhton, SQL, XAML</div>
-                        <div>Framworks: ASP.NET MVC, Ogre 3D, Xamarin.Forms</div>
+                        <div>Languages: C, C#, C++, Java, Javascript, Pyhton, SQL</div>
+                        <div>Framworks: ASP.NET MVC, Xamarin.Forms</div>
                      </div>
                   </span>
                </div>
@@ -183,25 +183,6 @@
                      <div>English : Fluent (15 years, of study and practice)</div>
                      <div>Spanish : Intermediate (3 years, of study and practice)</div>
                      <div>Danish : Low Intermediate (6 years of study)</div>
-                  </span>
-               </div>
-            </div>
-            <div class="clear"> </div>
-         </div>
-         <div class="section section-interests">
-            <h2 class="title">Interests</h2>
-            <div class="set">
-               <div class="item">
-                  <span class="info">
-                     <div>
-                        <div>Traveling</div>
-                        <div>Languages</div>
-                        <div>International Relations</div>
-                        <div>Latest Tech Trends</div>
-                        <div>Healthy Lifestyle</div>
-                        <div>Computer Games</div>
-                        <div>Problem Solving</div>
-                     </div>
                   </span>
                </div>
             </div>
