--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="btn-group">
 			<a class="btn" href="https://github.com/egillanton" role="button" target="_blank">code</a>
 			<a class="btn" href="https://www.facebook.com/egillanton" role="button" target="_blank">social</a>
-			<a class="btn" href="blog.html" role="button">blog</a>
+			<!-- <a class="btn" href="blog.html" role="button">blog</a> -->
 			<a class="btn" href="resume.html" role="button">resume</a>
 		</div>
 	</div>
@@ -25,7 +25,7 @@
 	<a class="item" href="https://www.facebook.com/egillanton">
 		<img src="images/icons/FacebookIcon.png" >
 	</a>
-	<a class="item" href="https://twitter.com/egill_anton">
+<!-- 	<a class="item" href="https://twitter.com/egill_anton">
 		<img src="images/icons/TwitterIcon.png" >
 	</a>
 	<a class="item" href="https://plus.google.com/107047887002688021953">
@@ -33,18 +33,18 @@
 	</a>
 	<a class="item" href="https://www.instagram.com/egillanton/">
 		<img src="images/icons/InstagramIcon.png" >
-	</a>
+	</a> -->
 	<a class="item" href="skype:egillanton?call">
 		<img src="images/icons/SkypeIcon.png" >
 	</a>
 	<a class="item" href="https://www.youtube.com/channel/UCWyc7nAIiWKDp0mtLO66ssg">
 		<img src="images/icons/YoutubeIcon.png" >
 	</a>
-	<a class="item" href="https://www.linkedin.com/in/egillanton/">
-		<img src="images/icons/LinkedInIcon.png" >
-	</a>
 	<a class="item" href="https://github.com/egillanton">
 		<img src="images/icons/GitHubIcon.png" >
+	</a>
+	<a class="item" href="https://www.linkedin.com/in/egillanton/">
+		<img src="images/icons/LinkedInIcon.png" >
 	</a>
 	<a class="item" href="mailto:egillanton@live.com">
 		<img src="images/icons/EmailIcon.png" >
