--- a/resume.html
+++ b/resume.html
@@ -59,6 +59,13 @@
             <h2 class="title">Education</h2>
             <div class="set">
                <div class="item">
+                  <h3><span class="course l">Self-Driving Car Engineer Nanodegree</span>
+                     <span class="date r">July 2017 &mdash; Current</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="school">udacity</span>
+               </div>
+               <div class="item">
                   <h3><span class="course l">B.Sc Computer Science</span>
                      <span class="date r">Aug 2014 &mdash; Jun 2017</span>
                   </h3>
