--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@
                      <span class="date r">July 2017 &mdash; Current</span>
                   </h3>
                   <div class="clear"> </div>
-                  <span class="school">udacity</span>
+                  <span class="school">Udacity</span>
                </div>
                <div class="item">
                   <h3><span class="course l">B.Sc Computer Science</span>
