--- a/resume.html
+++ b/resume.html
@@ -10,9 +10,9 @@
       <link rel="stylesheet" href="stylesheets/resume.css">
    </head>
    <body>
-      <div>
+<!--       <div>
          <h1 id="main-header">My resume</h1>
-      </div>
+      </div> -->
       <div id="main">
          <div id="photo">
             <img src="images/profile.jpg" alt="My profile picture" />
