--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,7 @@
             <div class="set">
                <div class="item">
                   <h3><span class="course l">Self-Driving Car Engineer Nanodegree</span>
-                     <span class="date r">July 2017 &mdash; Current</span>
+                     <span class="date r">July 2017 &mdash; Present</span>
                   </h3>
                   <div class="clear"> </div>
                   <span class="school">Udacity</span>
