--- a/resume.html
+++ b/resume.html
@@ -100,11 +100,11 @@
             <h2 class="title">Work experience</h2>
             <div class="set">
                <div class="item">
-                  <h3><span class="company l">Össur hf.</span>
-                     <span class="date r">June 2017 &mdash; Present</span>
+                  <h3><span class="company l">Reykjavik University</span>
+                     <span class="date r">August 2017 &mdash; Present</span>
                   </h3>
                   <div class="clear"> </div>
-                  <span class="job_title">Software Developer - Contractor</span>
+                  <span class="job_title">Teacher Assistance</span>
                   <div class="clear"> </div>
                </div>
                <div class="item">
