--- a/resume.html
+++ b/resume.html
@@ -109,6 +109,14 @@
                </div>
                <div class="item">
                   <h3><span class="company l">Össur hf.</span>
+                     <span class="date r">June 2017 &mdash; August 2017</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="job_title">Software Developer - Contractor</span>
+                  <div class="clear"> </div>
+               </div>
+               <div class="item">
+                  <h3><span class="company l">Össur hf.</span>
                      <span class="date r">Jan 2017 &mdash; May 2017</span>
                   </h3>
                   <div class="clear"> </div>
